--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
 body {
   background-color: lightblue;
 }
+
+.player1, .player2 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  border: 5px solid black;
+  margin: 10px;
+  display: inline-block;
+}
